# flxlibs

./: .gitignore  CMakeLists.txt  README.md
apps/: emu_confgen.cxx
cmake/: flxlibsConfig.cmake.in
docs/: Basic-tests.md  Checking-Debugging-Optical-Fibre-Status.md  Configure-the-FELIX-card.md  Configuring-the-EMU.md  Enabling-links-and-setting-the-superchunk-factor.md  Enabling-links-through-software.md  FELIX-Software-Suite-hack.md  FELIX-assets.md  Home.md  Initial-setup-of-FELIX.md  Integration-tests.md  Local-driver.md  README.md  Using-fdaq.md
include/flxlibs/: AvailableParserOperations.hpp
plugins/: FelixCardController.cpp  FelixCardController.hpp  FelixCardReader.cpp  FelixCardReader.hpp  FelixReaderModule.cpp  FelixReaderModule.hpp
python/flxlibs/: app_confgen.py
python/flxlibs/cardcontrollerapp/: cardcontrollerapp_gen.py
schema/: flxlibs-FelixCardReader-make.jsonnet  flxlibs-FelixCardReader-schema.jsonnet  readout-FelixCardReader-make.jsonnet  readout-FelixCardReader-schema.jsonnet
schema/flxlibs/: confgen.jsonnet  felixcardcontroller.jsonnet  felixcardcontrollerinfo.jsonnet  felixcardreader.jsonnet  felixcardreaderinfo.jsonnet
schema/flxlibs/opmon/: ElinkModel.proto  FelixCardReader.proto
scripts/: felixcardcontrollerconf_gen.py  flx.json  flx_ctrl_gen  flxctrl-conf.py  setup_felix_driver.sh  setup_felix_sw_env.sh
scripts/ccm-scripts/: emu-5links-slr1  emu-5links-slr2  emulinkconfig.sh  femu-enable.sh  init.sh  linkconfig.sh  reset-gth.sh
scripts/flxrpc/client/: checkLinks.py  fanoutRealLinks.py  felixReset.py
scripts/flxrpc/server/: felixRPCMonitor.py  felixRPCServer.py
scripts/integration-tests/: daqconf_fw.json  flx_conf_emu.json  flx_conf_fe.json  flx_fwtp_conf_emu.json  flx_fwtp_conf_fe.json  hw_map_10links.txt  record-cmd.json  set_gbt.sh  set_wibulator.sh  test-adc-dataflow-emu.sh  test-adc-dataflow-fe.sh  test-communication.sh  test-tpg-dataflow-emu.sh  test-tpg-dataflow-fe.sh  test-tpg-dataflow-wib-slr0.sh  test-tpg-dataflow-wib-slr1.sh  test-tpg-dataflow-wib.sh
scripts/sw-suite/: change-compiler.sh  clone_all-minimal.sh  copy-minimal.sh  copy-tools.sh
src/: CardConstants.hpp  CardControllerWrapper.cpp  CardControllerWrapper.hpp  CardWrapper.cpp  CardWrapper.hpp  CreateElink.hpp  DefaultParserImpl.cpp  DefaultParserImpl.hpp  ElinkConcept.hpp  ElinkHandler.cpp  ElinkHandler.hpp  ElinkModel.hpp  FelixDefinitions.hpp  FelixIssues.hpp  FelixStatistics.hpp
test/: felix_readout_card0_app.json  felix_readout_card1_app.json  felix_wib2_readout.json  felixreadout-commands.json
test/apps/: emuConfigGen.cpp  test_cardwrapper_app.cxx  test_elink_to_file_app.cxx  test_elink_to_heap_app.cxx  test_elinkhandler_app.cxx  test_tp_elinkhandler_app.cxx
